--- a/css/master.scss
+++ b/css/master.scss
@@ -6,12 +6,12 @@
 @import "_atoms/forms";
 
 @import "_molecules/accordions";
-@import "_molecules/banners";
 @import "_molecules/blockquotes";
 @import "_molecules/cards";
 @import "_molecules/media-grid-items";
 @import "_molecules/messaging";
 @import "_molecules/navigation";
 
+@import "_organisms/banners";
 @import "_organisms/footers";
 @import "_organisms/headers";
