--- a/css/_organisms/_footers.scss
+++ b/css/_organisms/_footers.scss
@@ -11,6 +11,7 @@ footer {
     flex-direction: column;
     height: auto;
     padding: 0;
+    font-size: 1rem;
     transform: translateX(0);
     li {
       padding: 0 0 1rem;
