--- a/css/_organisms/_headers.scss
+++ b/css/_organisms/_headers.scss
@@ -1,8 +1,8 @@
 // HEADERS
 header {
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
+  flex-direction: row;
+  align-items: center;
   position: fixed;
   z-index: 100;
   width: 100%;
@@ -10,7 +10,21 @@ header {
   padding: 1rem;
   background-color: $white;
   h1 {display: none;}
-  .logo {display: none;}
+  .logo {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    position: absolute;
+    top: 1.5rem;
+    width: 4rem;
+    margin: 0 0 0 1rem;
+    @include transition(all, 0.25s, ease);
+    a {line-height: 0.7;}
+  }
+}
+
+header .logo.open {
+  @include transform(translateX(-10rem));
 }
 
 .header--fixed {
@@ -35,12 +49,8 @@ header {
     flex-direction: row;
     align-items: center;
     .logo {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      width: 4rem;
-      margin: 0 0 0 1rem;
-      a {line-height: 0.7;}
+      position: relative;
+      top: auto;
     }
   }
 }
