Many many updates
Updated header navigation html and css to accommodate search; updated logo svg (to remove duplicate ids per html5 validation).

--- a/css/_global/_base.scss
+++ b/css/_global/_base.scss
@@ -29,9 +29,12 @@ body, .body {
   width: 100%;
   height: auto;
   overflow-x: hidden;
+  overflow-y: auto;
   margin: 0 auto;
   padding: 0;
 }
+
+body.open {overflow-y: hidden;}
 
 * {
   -webkit-box-sizing: border-box;
