--- a/css/_global/_layout.scss
+++ b/css/_global/_layout.scss
@@ -176,3 +176,5 @@ p + figure {padding: 2rem 0 1rem;}
   .column > figure:first-child {padding: 0 0 1rem;}
   .column p + figure:last-child {padding: 2rem 0 0;}
 }
+
+.visuallyhidden {display: none;}
