--- a/css/master.css
+++ b/css/master.css
@@ -100,8 +100,12 @@ body, .body {
   width: 100%;
   height: auto;
   overflow-x: hidden;
+  overflow-y: auto;
   margin: 0 auto;
   padding: 0; }
+
+body.open {
+  overflow-y: hidden; }
 
 * {
   -webkit-box-sizing: border-box;
@@ -304,6 +308,9 @@ p + figure {
     padding: 0 0 1rem; }
   .column p + figure:last-child {
     padding: 2rem 0 0; } }
+
+.visuallyhidden {
+  display: none; }
 
 /* 
   NOTES:  
@@ -1355,29 +1362,35 @@ nav {
   nav ul li:last-child {
     padding: 1rem 0; }
 
-nav.open button.menu-toggle svg.menu-toggle-open {
-  width: 0; }
-
-nav.open button.menu-toggle svg.menu-toggle-close {
-  width: 2rem; }
-
-nav.open ul {
-  height: 100vh;
-  padding: 1rem 0 0;
-  -webkit-transform: translateX(0);
-  -moz-transform: translateX(0);
-  -ms-transform: translateX(0);
-  -o-transform: translateX(0);
-  transform: translateX(0); }
+nav.open {
+  height: 100vh; }
+  nav.open button.menu-toggle svg.menu-toggle-open {
+    width: 0; }
+  nav.open button.menu-toggle svg.menu-toggle-close {
+    width: 2rem; }
+  nav.open ul {
+    height: auto;
+    padding: 1rem 0 0;
+    -webkit-transform: translateX(0);
+    -moz-transform: translateX(0);
+    -ms-transform: translateX(0);
+    -o-transform: translateX(0);
+    transform: translateX(0); }
 
 @media (min-width: 48rem) {
   nav {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    position: relative;
     padding: 1rem; }
     nav button.menu-toggle {
       display: none; }
     nav ul {
       flex-direction: row;
+      width: auto;
       height: auto;
+      margin: 0;
       padding: 0;
       font-size: 1rem;
       -webkit-transform: translateX(0);
@@ -1387,9 +1400,82 @@ nav.open ul {
       transform: translateX(0); }
       nav ul li {
         width: auto;
-        padding: 0 2rem 0 0; }
+        padding: 0 1rem 0 0; }
     nav ul li:last-child {
       padding: 0; } }
+
+@media (min-width: 64rem) {
+  nav ul li {
+    padding: 0 2rem 0 0; } }
+
+nav form.search {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  position: relative;
+  height: 0;
+  -webkit-transform: translateX(-100rem);
+  -moz-transform: translateX(-100rem);
+  -ms-transform: translateX(-100rem);
+  -o-transform: translateX(-100rem);
+  transform: translateX(-100rem);
+  -webkit-transition: all 0.325s ease 0s;
+  -moz-transition: all 0.325s ease 0s;
+  -ms-transition: all 0.325s ease 0s;
+  -o-transition: all 0.325s ease 0s;
+  transition: all 0.325s ease 0s; }
+  nav form.search fieldset {
+    max-width: none;
+    margin: 0 auto; }
+    nav form.search fieldset input[type="search"] {
+      padding: 0.4rem 0;
+      border-top: none;
+      border-right: none;
+      border-left: none;
+      border-radius: 0; }
+  nav form.search button[type="submit"] {
+    position: absolute;
+    right: 0;
+    bottom: 0.25rem;
+    margin: 0; }
+
+nav.open form.search {
+  height: auto;
+  -webkit-transform: translateX(0);
+  -moz-transform: translateX(0);
+  -ms-transform: translateX(0);
+  -o-transform: translateX(0);
+  transform: translateX(0); }
+
+nav button.search-toggle {
+  display: none; }
+
+@media (min-width: 48rem) {
+  nav button.search-toggle {
+    display: inherit;
+    max-height: none;
+    margin: 0 0 0 1rem;
+    padding: 0;
+    border: none;
+    background-color: transparent; }
+    nav button.search-toggle svg {
+      width: 2.5rem;
+      fill: #df3a32;
+      -webkit-transition: all 0.25s ease 0s;
+      -moz-transition: all 0.25s ease 0s;
+      -ms-transition: all 0.25s ease 0s;
+      -o-transition: all 0.25s ease 0s;
+      transition: all 0.25s ease 0s; }
+  nav button.search-toggle:hover svg,
+  nav button.search-toggle:focus svg {
+    fill: #003442; } }
+
+@media (min-width: 64rem) {
+  nav button.search-toggle {
+    margin: 0 0 0 2rem; }
+    nav button.search-toggle svg {
+      width: auto;
+      height: 1.5rem; } }
 
 .banner {
   display: flex;
@@ -1686,4 +1772,6 @@ header .logo.open {
     align-items: center; }
     header .logo {
       position: relative;
-      top: auto; } }
+      top: auto; }
+    header nav ul {
+      align-items: center; } }
