--- a/css/master.scss
+++ b/css/master.scss
@@ -11,6 +11,7 @@
 @import "_molecules/media-grid-items";
 @import "_molecules/messaging";
 @import "_molecules/navigation";
+@import "_molecules/search";
 
 @import "_organisms/banners";
 @import "_organisms/footers";
