--- a/css/_molecules/_navigation.scss
+++ b/css/_molecules/_navigation.scss
@@ -38,12 +38,13 @@ nav {
 }
 
 nav.open {
+  height: 100vh;
   button.menu-toggle {
     svg.menu-toggle-open {width: 0;}
     svg.menu-toggle-close {width: 2rem;}
   }
   ul {
-    height: 100vh;
+    height: auto;
     padding: 1rem 0 0;
     @include transform(translateX(0));
   }
@@ -51,19 +52,33 @@ nav.open {
 
 @media (min-width: 48rem) {
   nav {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    position: relative;
     padding: 1rem;
     button.menu-toggle {display: none;}
     ul {
       flex-direction: row;
+      width: auto;
       height: auto;
+      margin: 0;
       padding: 0;
       font-size: 1rem;
       @include transform (translateX(0));
       li {
         width: auto;
-        padding: 0 2rem 0 0;
+        padding: 0 1rem 0 0;
       }
     }
     ul li:last-child {padding: 0;}
+  }
+}
+
+@media (min-width: 64rem) {
+  nav {
+    ul {
+      li {padding: 0 2rem 0 0;}
+    }
   }
 }
