--- a/css/_organisms/_banners.scss
+++ b/css/_organisms/_banners.scss
@@ -17,6 +17,7 @@
     margin: 0;
     padding: 2rem;
     h1, h2, h3, h4 {padding: 0;}
+    p {padding: 1rem 0 0;}
   }
   img {
     width: calc(100% - 4rem);
