--- a/style/layout/layout.html
+++ b/style/layout/layout.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- css -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Ovo|Montserrat:400,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Ovo&display=swap" rel="stylesheet">
+    <link href="https://unpkg.com/aos@next/dist/aos.css" rel="stylesheet">
     <link href="../../css/master.css" rel="stylesheet">
   </head>
   <body>
     <header>
-      <h1>Header</h1>
       <div class="logo">
         <a href="../../index.html">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1024 796"><defs><style>.cls-1{fill:#01232d;}.cls-2{fill:#013342;}</style></defs><title>delta-design-system-logo</title><polygon class="cls-1" points="512 796 1024 796 512 0 512 796"/><polygon class="cls-2" points="0 796 512 796 512 0 0 796"/></svg>
@@ -22,7 +23,7 @@
           <svg class="menu-toggle-open" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M3 4h18v2H3V4zm0 7h18v2H3v-2zm0 7h18v2H3v-2z"/></svg>
           <svg class="menu-toggle-close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M12 10.586l4.95-4.95 1.414 1.414-4.95 4.95 4.95 4.95-1.414 1.414-4.95-4.95-4.95 4.95-1.414-1.414 4.95-4.95-4.95-4.95L7.05 5.636z"/></svg>
         </button>
-        <ul>
+        <ul id="header-navigation">
           <li><a href="../../index.html">Overview</a></li>
           <li><a href="../../atoms/atoms.html">Atoms</a></li>
           <li><a href="../../molecules/molecules.html">Molecules</a></li>
@@ -34,94 +35,90 @@
     </header>
     <main>
       <article>
+        <h1 class="title">Layout</h1>
+        <p>The goal of content is to be discoverable and easy to absorb, and a site's or application's layout should not complicate that process.</p>
+        <p>The Delta Design System is built on a <a href="https://alistapart.com/article/responsive-web-design/" target="_blank">responsive design</a> framework using <a href="https://developer.mozilla.org/en-US/docs/Glossary/Flexbox" target="_blank">flexbox</a>.</p>
+        <p>The parent container in the framework is a <code>.row</code>. Each <code>.row</code> can be assigned an additional classes that define how its child columns occupy the horizontal space of the row. On screens smaller than 48rem wide, all columns in the <code>.row</code> span the full width of the browser and stack vertically. On screens wider than 48rem:</p>
+        <ul>
+          <li><code>class="row wide"</code> each <code>.column</code> child will span the full width of the browser window.</li>
+          <li><code>class="row fifty"</code> each <code>.column</code> child will span 50% of the width of the browser window.</li>
+          <li><code>class="row golden left"</code> the first <code>.column</code> will span 62% of the width of the browser window and the second <code>.column</code> will span 38%.</li>
+          <li><code>class="row golden right"</code> the first <code>.column</code> will span 38% of the width of the browser window and the second <code>.column</code> will span 62%.</li>
+          <li><code>class="row thirds"</code> each <code>.column</code> child will span approximately 33% of the width of the browser window.</li>
+          <li><code>class="row fourths"</code> each <code>.column</code> child will span approximately 50% of the width of the browser window on screens wider than 48rem but smaller than 64rem. On screens wider than 64rem, each <code>.column</code> child will span approximately 25% of the width of the browser window.</li>
+        </ul>
         <section class="row wide">
-          <div class="column">
-            <h1 class="title">Layout</h1>
-            <p>The goal of content is to be discoverable and easy to absorb, and a site's or application's layout should not complicate that process.</p>
-            <p>The Delta Design System is built on a <a href="https://alistapart.com/article/responsive-web-design/" target="_blank">responsive design</a> framework using <a href="https://developer.mozilla.org/en-US/docs/Glossary/Flexbox" target="_blank">flexbox</a>.</p>
-            <p>The parent container in the framework is a <code>.row</code>. Each <code>.row</code> can be assigned an additional classes that define how its child columns occupy the horizontal space of the row. On screens smaller than 48rem wide, all columns in the <code>.row</code> span the full width of the browser and stack vertically. On screens wider than 48rem:</p>
-            <ul>
-              <li><code>class="row wide"</code> each <code>.column</code> child will span the full width of the browser window.</li>
-              <li><code>class="row fifty"</code> each <code>.column</code> child will span 50% of the width of the browser window.</li>
-              <li><code>class="row golden left"</code> the first <code>.column</code> will span 62% of the width of the browser window and the second <code>.column</code> will span 38%.</li>
-              <li><code>class="row golden right"</code> the first <code>.column</code> will span 38% of the width of the browser window and the second <code>.column</code> will span 62%.</li>
-              <li><code>class="row thirds"</code> each <code>.column</code> child will span approximately 33% of the width of the browser window.</li>
-              <li><code>class="row fourths"</code> each <code>.column</code> child will span approximately 50% of the width of the browser window on screens wider than 48rem but smaller than 64rem. On screens wider than 64rem, each <code>.column</code> child will span approximately 25% of the width of the browser window.</li>
-            </ul>
-          </div>
-        </section>
-        <section class="row wide">
-          <h1>Layout Examples</h1>
+          <h2>Layout Examples</h2>
           <div class="row fence wide">
-            <h2>Wide Row</h2>
+            <h3>Wide Row</h3>
             <div class="column">
               <p>Columns in a <code>.wide</code> row occupy 100% of the available width on screens of all widths. More than one <code>.wide</code> column in a row will stack themselves vertically.</p>
             </div>
           </div>
           <div class="row fence fifty">
-            <h2>Fifty Fifty Row</h2>
+            <h3>Fifty Fifty Row</h3>
             <div class="column">
-              <h3>Left Column</h3>
+              <h4>Left Column</h4>
               <p>Columns in a <code>.fifty</code> row occupy 50% of the available width on screens wider than 48rem.</p>
             </div>
             <div class="column">
-              <h3>Right Column</h3>
+              <h4>Right Column</h4>
               <p>Columns in a <code>.fifty</code> row occupy 50% of the available width on screens wider than 48rem.</p>
             </div>
           </div>
           <div class="row fence golden left">
-            <h2>Golden Left Row</h2>
+            <h3>Golden Left Row</h3>
             <div class="column">
-              <h3>Left Column</h3>
+              <h4>Left Column</h4>
               <p>The left column in a golden left row occupies 62% of the available width on screens wider than 48rem.</p>
             </div>
             <div class="column">
-              <h3>Right Column</h3>
+              <h4>Right Column</h4>
               <p>The right column in a golden left row occupies 38% of the available width on screens wider than 48rem.</p>
             </div>
           </div>
           <div class="row fence golden right">
-            <h2>Golden Right Row</h2>
+            <h3>Golden Right Row</h3>
             <div class="column">
-              <h3>Left Column</h3>
+              <h4>Left Column</h4>
               <p>The left column in a golden right row occupies 62% of the available width on screens wider than 48rem.</p>
             </div>
             <div class="column">
-              <h3>Right Column</h3>
+              <h4>Right Column</h4>
               <p>The right column in a golden right row occupies 38% of the available width on screens wider than 48rem.</p>
             </div>
           </div>
           <div class="row fence thirds">
-            <h2>Thirds Row</h2>
+            <h3>Thirds Row</h3>
             <div class="column">
-              <h3>First Column</h3>
+              <h4>First Column</h4>
               <p>The first column in a <code>.thirds</code> row occupies 33% of the available width on screens wider than 48rem.</p>
             </div>
             <div class="column">
-              <h3>Second Column</h3>
+              <h4>Second Column</h4>
               <p>The second column in a <code>.thirds</code> row occupies 33% of the available width on screens wider than 48rem.</p>
             </div>
             <div class="column">
-              <h3>Third Column</h3>
+              <h4>Third Column</h4>
               <p>The third column in a <code>.thirds</code> row occupies 33% of the available width on screens wider than 48rem.</p>
             </div>
           </div>
           <div class="row fence fourths">
-            <h2>Fourths Row</h2>
+            <h3>Fourths Row</h3>
             <div class="column">
-              <h3>First Column</h3>
+              <h4>First Column</h4>
               <p>The first column in a <code>.fourths</code> row occupies 50% of the available width on screens wider than 48rem and 25% of the available width on screens wider than 64rem.</p>
             </div>
             <div class="column">
-              <h3>Second Column</h3>
+              <h4>Second Column</h4>
               <p>The second column in a <code>.fourths</code> row occupies 50% of the available width on screens wider than 48rem and 25% of the available width on screens wider than 64rem.</p>
             </div>
             <div class="column">
-              <h3>Third Column</h3>
+              <h4>Third Column</h4>
               <p>The third column in a <code>.fourths</code> row occupies 50% of the available width on screens wider than 48rem and 25% of the available width on screens wider than 64rem.</p>
             </div>
             <div class="column">
-              <h3>Fourth Column</h3>
+              <h4>Fourth Column</h4>
               <p>The fourth column in a <code>.fourths</code> row occupies 50% of the available width on screens wider than 48rem and 25% of the available width on screens wider than 64rem.</p>
             </div>
           </div>
@@ -129,10 +126,9 @@
       </article>
     </main>
     <footer>
-      <h1>Footer</h1>
       <div class="row fifty">
         <nav class="column" aria-labelledby="footer-navigation">
-          <ul>
+          <ul id="footer-navigation">
             <li><a href="../../index.html">Overview</a></li>
             <li><a href="../../atoms/atoms.html">Atoms</a></li>
             <li><a href="../../molecules/molecules.html">Molecules</a></li>
@@ -144,7 +140,7 @@
         <section class="meta-content column">
           <div class="logo">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1024 796"><defs><style>.cls-1{fill:#01232d;}.cls-2{fill:#013342;}</style></defs><title>delta-design-system-logo</title><polygon class="cls-1" points="512 796 1024 796 512 0 512 796"/><polygon class="cls-2" points="0 796 512 796 512 0 0 796"/></svg>
-            <h1 class="center">The Delta Design System</h1>
+            <h2 class="center">The Delta Design System</h2>
           </div>
           <div class="github">
             <a href="https://github.com/cdfournier/delta-design-system" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M12 2C6.475 2 2 6.475 2 12a9.994 9.994 0 0 0 6.838 9.488c.5.087.687-.213.687-.476 0-.237-.013-1.024-.013-1.862-2.512.463-3.162-.612-3.362-1.175-.113-.288-.6-1.175-1.025-1.413-.35-.187-.85-.65-.013-.662.788-.013 1.35.725 1.538 1.025.9 1.512 2.338 1.087 2.912.825.088-.65.35-1.087.638-1.337-2.225-.25-4.55-1.113-4.55-4.938 0-1.088.387-1.987 1.025-2.688-.1-.25-.45-1.275.1-2.65 0 0 .837-.262 2.75 1.026a9.28 9.28 0 0 1 2.5-.338c.85 0 1.7.112 2.5.337 1.912-1.3 2.75-1.024 2.75-1.024.55 1.375.2 2.4.1 2.65.637.7 1.025 1.587 1.025 2.687 0 3.838-2.337 4.688-4.562 4.938.362.312.675.912.675 1.85 0 1.337-.013 2.412-.013 2.75 0 .262.188.574.688.474A10.016 10.016 0 0 0 22 12c0-5.525-4.475-10-10-10z"/></svg></a>
@@ -159,7 +155,11 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
     <script src="https://unpkg.com/headroom.js@0.9.4/dist/headroom.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="../../assets/scripts/site.js"></script>
+    <script>
+      AOS.init({duration: 600});
+    </script>
     <script>
       var myElement = document.querySelector('header');
       var headroom  = new Headroom(myElement);
