--- a/css/_global/_layout.scss
+++ b/css/_global/_layout.scss
@@ -31,7 +31,7 @@ main {
   width: calc(100% - 2rem);
   height: 1px;
   margin: 2rem auto 0;
-  background-color: #eeeeee;
+  background-color: $lt-gray;
   content: "";
 }
 
