--- a/css/_global/_typography.scss
+++ b/css/_global/_typography.scss
@@ -181,6 +181,7 @@ pre {
 }
 
 p > code, li > code {
+  padding: 0.15rem;
   font-family: consolas,"Liberation Mono",courier,monospace;
   font-size: 0.975rem;
   white-space: nowrap;
