--- a/css/_molecules/_forms.scss
+++ b/css/_molecules/_forms.scss
@@ -36,7 +36,7 @@ fieldset {
   position: relative;
   width: 100%;
   max-width: 36rem;
-  margin: 0.8rem 0;
+  margin: 0.8rem 0 0;
   padding: 0;
   border: none;
   .message {
