--- a/css/master.scss
+++ b/css/master.scss
@@ -3,16 +3,16 @@
 @import "_global/typography";
 
 @import "_atoms/buttons";
-@import "_atoms/forms";
 
 @import "_molecules/accordions";
 @import "_molecules/blockquotes";
 @import "_molecules/cards";
+@import "_molecules/forms";
 @import "_molecules/media-grid-items";
 @import "_molecules/messaging";
 @import "_molecules/navigation";
-@import "_molecules/search";
 
 @import "_organisms/banners";
 @import "_organisms/footers";
+@import "_organisms/forms";
 @import "_organisms/headers";
