--- a/css/master.css
+++ b/css/master.css
@@ -1035,11 +1035,11 @@ input[type="radio"] {
 input[type="radio"]:checked:before {
   display: block;
   position: absolute;
-  top: 0.325rem;
-  left: 0.325rem;
+  top: 20%;
+  left: 20%;
   margin: 0;
-  width: 0.75rem;
-  height: 0.75rem;
+  width: 60%;
+  height: 60%;
   border-radius: 100%;
   background-color: #000000;
   content: ""; }
@@ -1053,6 +1053,7 @@ input.toggle[type="checkbox"] {
   align-items: center;
   position: absolute;
   top: 0;
+  right: 0;
   left: 0;
   width: 3rem;
   height: 1.5rem;
@@ -1081,6 +1082,7 @@ input.toggle[type="checkbox"]:after {
   right: 0;
   bottom: 0;
   left: 0;
+  width: 2.9rem;
   margin: 0;
   background-image: url(../assets/icons/close-circle-fill.svg);
   background-position-x: left;
