About page; image optimization; en dashes
Added About page; optimized jpg assets; replaced em dashes with en dashes; some addtional copy edits.

--- a/css/_global/_typography.scss
+++ b/css/_global/_typography.scss
@@ -183,6 +183,7 @@ pre {
 }
 
 p > code, li > code {
+  margin: 0 0.15rem;
   padding: 0.15rem;
   font-family: consolas,"Liberation Mono",courier,monospace;
   font-size: 0.975rem;
