--- a/css/master.css
+++ b/css/master.css
@@ -506,6 +506,7 @@ pre {
   line-height: 1.2; }
 
 p > code, li > code {
+  margin: 0 0.15rem;
   padding: 0.15rem;
   font-family: consolas,"Liberation Mono",courier,monospace;
   font-size: 0.975rem;
