--- a/css/_global/_colors.scss
+++ b/css/_global/_colors.scss
@@ -26,6 +26,9 @@ $secondary: #003442;
 .bg-dk-gray {background-color: $dk-gray;}
 .bg-md-gray {background-color: $md-gray;}
 .bg-lt-gray {background-color: $lt-gray;}
+.bg-primary {background-color: $primary;}
+.bg-secondary {background-color: $secondary;}
+
 .bg-dk-blue {background-color: $dk-blue;}
 .bg-lt-blue {background-color: $lt-blue;}
 .bg-crimson {background-color: $crimson;}
